fix AddressInput styles on mobile

--- a/Source/Website/Client/Styles/Test/inputs.scss
+++ b/Source/Website/Client/Styles/Test/inputs.scss
@@ -21,7 +21,7 @@
 
     .address-input-section {
         .address-input {
-            width: 500px;
+            max-width: 500px;
         }
     }
 }
